# labellint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: sample_coco.json
src/labellint/: __init__.py  core.py  formats.py  main.py  rules.py
tests/: conftest.py  test_core.py  test_format.py  test_main.py  test_rules.py
